   records.
 - Added output file support by -o/--out-file <output file> option.
 - Added standard input support with "-" file argument, meaning the
   disassembler now supports piped input.
 - Improved Atmel Generic / Intel HEX8 / Motorola S-Record auto-detection by
   first character rather than file extension.
 - Thanks to Thomas for all four of the above fixes and suggestions!
 - Added printing of original opcode data alongside disassembly.

Release 1.8 - 01/26/2011
 - Fixed address decoding for LDS, STS, JMP, and CALL instructions.
   Reversed the modification from release 1.7.
 - Added support for XCH, LAS, LAC, LAT instructions, bringing the disassembler
   up to date with AVR Instruction Set revision 0856I - 07/10.

Release 1.7 - 05/27/2010
 - Fixed address decoding for LDS, STS, JMP, and CALL instructions.
   Previously, vAVRdisasm was printing the disassembled address operands as
   twice the value they should have been for these instructions.

Release 1.6 - 02/04/2010
 - Fixed the number-of-operands field for the SPM instruction. This bug was
   causing vAVRdisasm to crash as it was attempting to format a non-existing 
   operand during disassembly.
 - Updated the README.

Release 1.5 - 08/25/2009
 - Renamed source files to make more sense and for better organization of code.
 - Added support for DES, SPM #2, LDS (16-bit), and STS (16-bit) instructions,
   bringing the disassembler to support the AVR instruction set up to revision
   0856H - 04/09.

Release 1.4 - 06/27/2009
 - Fixed handling of newlines (sometimes found at the end of program files) so 
   an "invalid record" error doesn't appear when a newline is read.
 - CRITICAL FIX: Fixed reading and disassembly of odd byte length records in
   Intel HEX8 and Motorola S-Record files. Special thanks to Ahmed for
   discovery and patch!

Release 1.3 - 01/08/2009
 - Fixed a few small bugs/typos for cleaner compilation.
 - CRITICAL FIX: Corrected the absolute address calculation, used in